CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(XFC)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(GLIB REQUIRED glib-2.0) 
PKG_SEARCH_MODULE(SIGC REQUIRED sigc++-2.0)
PKG_SEARCH_MODULE(GOBJ REQUIRED gobject-2.0)
PKG_SEARCH_MODULE(GMOD REQUIRED gmodule-2.0) 
PKG_SEARCH_MODULE(GTHR REQUIRED gthread-2.0)
PKG_SEARCH_MODULE(GTK REQUIRED gtk+-2.0)
PKG_SEARCH_MODULE(GTK_PRN gtk+-unix-print-2.0)
PKG_SEARCH_MODULE(GDK REQUIRED gdk-2.0 )
PKG_SEARCH_MODULE(SIGC REQUIRED sigc++-2.0)
PKG_SEARCH_MODULE(PANGO REQUIRED pango)
PKG_SEARCH_MODULE(CAIRO REQUIRED cairo)
PKG_SEARCH_MODULE(SOURCEVIEW gtksourceview-1.0)
PKG_SEARCH_MODULE(XFCE_PANEL libxfce4panel-1.0)
PKG_SEARCH_MODULE(XFCE_UTILS libxfce4util-1.0)
PKG_SEARCH_MODULE(XFCE_UI libxfce4ui-1)
PKG_SEARCH_MODULE(XFCE_CONF libxfconf-0)
PKG_SEARCH_MODULE(GLADE libglade-2.0)

IF(PANGO_FOUND)
   SET(XFC_PANGO 1)
ENDIF(PANGO_FOUND)
		                         
IF(CAIRO_FOUND)
   SET(XFC_CAIRO 1)
ENDIF(CAIRO_FOUND)
					   
SET(XFC_MAJOR_VERSION 4)
SET(XFC_MINOR_VERSION 6)
SET(XFC_MICRO_VERSION 0)

SET(XFC_VERSION "${XFC_MAJOR_VERSION}.${XFC_MINOR_VERSION}.${XFC_MICRO_VERSION}")

SET(XFCEDIR xfce4)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(ui)

IF(GLADE_FOUND)
   SET(XFC_GLADE 1)
   ADD_SUBDIRECTORY(glade)
ENDIF(GLADE_FOUND)

IF(XFCE_UI_FOUND)
   SET(XFC_DE 1)
   ADD_SUBDIRECTORY(de)
ENDIF(XFCE_UI_FOUND)

IF(SOURCEVIEW_FOUND)
   SET( XFC_SOURCEVIEW 1 )
   ADD_SUBDIRECTORY(sourceview)
ENDIF(SOURCEVIEW_FOUND)

ADD_SUBDIRECTORY(demos)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(docs)

CONFIGURE_FILE(xfc-config.h.in xfc-config.h)
