## xfc examples directory
INCLUDE_DIRECTORIES( ${XFC_UI_SOURCE_DIR} ${XFC_CORE_SOURCE_DIR}
    ${GLIB_INCLUDE_DIRS} ${SIGC_INCLUDE_DIRS} ${GDK_INCLUDE_DIRS}
    ${GTK_INCLUDE_DIRS} ${XFC_SOURCE_DIR})

ADD_SUBDIRECTORY( core )
ADD_SUBDIRECTORY( howto )
ADD_SUBDIRECTORY( ui )
ADD_SUBDIRECTORY( tutorial )

# @GLADE_EXAMPLESDIR@ @SOURCEVIEW_EXAMPLEDIR@
