#ADD_SUBDIRECTORY( ui )
#ADD_SUBDIRECTORY( panel )
ADD_SUBDIRECTORY( utils )

INCLUDE_DIRECTORIES( ${XFCE_UTILS_INCLUDE_DIRS} ${XFCE_CONF_INCLUDE_DIRS} ${XFCE_UI_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${XFC_DE_SOURCE_DIR} ${XFC_CORE_SOURCE_DIR} ${SIGC_INCLUDE_DIRS} ${XFCE_CONF_INCLUDE_DIRS} ${XFCE_UTIL_INCLUDE_DIRS})

ADD_LIBRARY( xfc_de SHARED main.cc ${utils_src} ${ui_src})

TARGET_LINK_LIBRARIES( xfc_de ${XFCE_UTILS_LIBRARIES} ${XFCE_CONF_LIBRARIES} ${XFCE_UI_LIBARIES})
SET_TARGET_PROPERTIES( xfc_de PROPERTIES VERSION ${XFC_VERSION} SOVERSION ${XFC_MAJOR_VERSION} )

INSTALL(TARGETS xfc_de
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib )
