## xfc docs/images directory

xfc_imagesdir = $(xfc_docdir)/docs/images

xfc_images_DATA = \
 action.png \
 arrow.png \
 aspectframe.png \
 base.png \
 buttonbox.png \
 buttons.png \
 calendar.png \
 chapter01.png \
 chapter04.png \
 chapter06.png \
 chapter07.png \
 chapter09.png \
 colorselection1.png \
 colorselection2.png \
 comboboxentry.png \
 combobox.png \
 containers.png \
 dial.png \
 dnd.png \
 entrycompletion.png \
 entry.png \
 eventbox.png \
 example-2.png \
 fixed.png \
 fontselection1.png \
 fontselection2.png \
 frame.png \
 hellobuttons.png \
 helloworld.png \
 hierarchy.png \
 label.png \
 layout.png \
 menu.png \
 notebook.png \
 packbox.png \
 paned.png \
 progressbar.png \
 radiobuttons.png \
 rangewidgets.png \
 rulers.png \
 scribble.png \
 scrolledwindow.png \
 selection.png \
 simple.png \
 spinbutton.png \
 statusbar.png \
 stock.png \
 table.png \
 textview.png \
 thread1.png \
 thread2.png \
 tictactoe.png \
 toolbar.png \
 treeview.png \
 xfc.css \
 xfc.png

EXTRA_DIST = $(xfc_images_DATA)
