## xfc examples/howto directory

ADD_SUBDIRECTORY( actions )
ADD_SUBDIRECTORY( arrow )
ADD_SUBDIRECTORY( aspectframe )
ADD_SUBDIRECTORY( buttonbox )
ADD_SUBDIRECTORY( buttons )
ADD_SUBDIRECTORY( calendar )
ADD_SUBDIRECTORY( colorselection )
ADD_SUBDIRECTORY( combobox )
ADD_SUBDIRECTORY( dial )
ADD_SUBDIRECTORY( dnd )
ADD_SUBDIRECTORY( drawingarea )
ADD_SUBDIRECTORY( entry )
ADD_SUBDIRECTORY( entrycompletion )
ADD_SUBDIRECTORY( eventbox )
ADD_SUBDIRECTORY( fixed )
ADD_SUBDIRECTORY( fontselection )
ADD_SUBDIRECTORY( frame )
ADD_SUBDIRECTORY( label )
ADD_SUBDIRECTORY( menu )
ADD_SUBDIRECTORY( notebook )
ADD_SUBDIRECTORY( packbox )
ADD_SUBDIRECTORY( paned )
ADD_SUBDIRECTORY( progressbar )
ADD_SUBDIRECTORY( radiobuttons )
ADD_SUBDIRECTORY( rangewidgets )
ADD_SUBDIRECTORY( rulers )
ADD_SUBDIRECTORY( scrolledwindow )
ADD_SUBDIRECTORY( selection )
ADD_SUBDIRECTORY( spinbutton )
ADD_SUBDIRECTORY( statusbar )
ADD_SUBDIRECTORY( table )
ADD_SUBDIRECTORY( textview )
ADD_SUBDIRECTORY( thread )
ADD_SUBDIRECTORY( tictactoe )
ADD_SUBDIRECTORY( toolbar )
ADD_SUBDIRECTORY( treeview )
