## xfc examples/howto directory

SUBDIRS = \
 actions \
 arrow \
 aspectframe \
 buttonbox \
 buttons \
 calendar \
 colorselection \
 combobox \
 dial \
 dnd \
 drawingarea \
 entry \
 entrycompletion \
 eventbox \
 fixed \
 fontselection \
 frame \
 label \
 menu \
 notebook \
 packbox \
 paned \
 progressbar \
 radiobuttons \
 rangewidgets \
 rulers \
 scrolledwindow \
 selection \
 spinbutton \
 statusbar \
 table \
 textview \
 thread \
 tictactoe \
 toolbar \
 treeview

include $(top_srcdir)/examples/Makefile.fragment

EXTRA_DIST = README

howtodir = $(xfc_docdir)/examples/howto

howto_DATA = README
	