## libXFCglade source directory



ADD_SUBDIRECTORY( glade )

INCLUDE_DIRECTORIES( ${GLADE_INCLUDE_DIRS} ${XFC_CORE_SOURCE_DIR} ${XFC_UI_SOURCE_DIR} ${SIGC_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS} ${XFC_GLADE_SOURCE_DIR} )

ADD_LIBRARY( xfc_glade SHARED ${glade_src} )

TARGET_LINK_LIBRARIES( xfc_glade xfc_core xfc_ui ${GLADE_LIBRARIES} )
SET_TARGET_PROPERTIES( xfc_glade PROPERTIES VERSION ${XFC_VERSION} SOVERSION ${XFC_MAJOR_VERSION} )

INSTALL(TARGETS xfc_glade
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib )

INSTALL( FILES 
        xfcglade.hh
	DESTINATION include/xfce4/xfc )
