## libXFCsourceview source directory

ADD_SUBDIRECTORY( sourceview )

INCLUDE_DIRECTORIES( ${SOURCEVIEW_INCLUDE_DIRS} ${XFC_CORE_SOURCE_DIR} ${XFC_UI_SOURCE_DIR} 
    ${SIGC_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS} ${GTK_INCLUDE_DIRS} ${XFC_SOURCEVIEW_SOURCE_DIR} )

ADD_LIBRARY( xfc_sourceview SHARED ${sourceview_src})

TARGET_LINK_LIBRARIES( xfc_sourceview xfc_core xfc_ui ${GLADE_LIBRARIES} )
SET_TARGET_PROPERTIES( xfc_sourceview PROPERTIES VERSION ${XFC_VERSION} SOVERSION ${XFC_MAJOR_VERSION} )

INSTALL(TARGETS xfc_sourceview
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib )

