INCLUDE_DIRECTORIES( ${GLIB_INCLUDE_DIRS} ${GTK_INCLUDE_DIRS} ${GDK_INCLUDE_DIRS} ${GTK_PRN_INCLUDE_DIRS} ${SIGC_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${PANGO_INCLUDE_DIRS} ${CAIRO_INCLUDE_DIRS} ${XFC_CORE_SOURCE_DIR} ${XFC_UI_SOURCE_DIR} )

ADD_SUBDIRECTORY( atk )
ADD_SUBDIRECTORY( cairo ) 
ADD_SUBDIRECTORY( gdk ) 
ADD_SUBDIRECTORY( gdk-pixbuf ) 
ADD_SUBDIRECTORY( gtk )
ADD_SUBDIRECTORY( pango )

SET( src ${atk_src} ${cairo_src} ${gdk_src} ${gdk_pixbuf_src} ${gtk_src} ${pango_src} )

ADD_LIBRARY( xfc_ui SHARED main.cc ${src})

TARGET_LINK_LIBRARIES( xfc_ui xfc_core ${GTK_LIBRARIES} )
SET_TARGET_PROPERTIES( xfc_ui PROPERTIES VERSION ${XFC_VERSION} SOVERSION ${XFC_MAJOR_VERSION} )

CONFIGURE_FILE( config.h.in config.h )

INSTALL(TARGETS xfc_ui
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib )

INSTALL( FILES
 main.hh 
 ui.hh 
 xfcui.hh 
 config.h
 DESTINATION include/xfce4/xfc)

#SET_TARGET_PROPERTIES( xfc_ui PROPERTIES LINK_INTERFACE_LIBRARIES "")
