## xfc examples/core/threads directory

include $(top_srcdir)/examples/core/Makefile.fragment

noinst_PROGRAMS = \
 complex-thread \
 multiple-thread \
 simple-thread \
 threadpool

complex_thread_SOURCES = \
 complex-thread.cc

multiple_thread_SOURCES = \
 multiple-thread.cc

simple_thread_SOURCES = \
 simple-thread.cc

threadpool_SOURCES = \
 threadpool.cc
