## xfc examples/glade/example-1 directory

include $(top_srcdir)/examples/glade/Makefile.fragment

EXTRA_DIST = example-1.glade

noinst_PROGRAMS = example-1

example_1_SOURCES = \
 example-1.hh \
 example-1.cc 
 
example_1dir = $(xfc_docdir)/examples/glade/example-1

example_1_DATA = example-1.glade
 
 